--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,10 @@
 
 :root {
 --text: #c94ba9;
---background: #f3e1f3;
---primary: #f187d6;
---secondary: #f3c5e7;
---accent:  #ead3e4;
+--background: #c25681;
+--primary: #b03575;
+--secondary: #9c3e7a;
+--accent:  #b96b96;
 
 }
 
